# culturelense-ideax

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  turbo.json
.turbo/daemon/: 01f44ca13a81274f-turbo.log.2025-12-19
apps/: .env
apps/web/: .env  .env.example  drizzle.config.ts  next-intl.config.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/docs/: project_flow.md
apps/web/drizzle/: 0000_workable_mongoose.sql  0001_clear_madame_web.sql  0002_low_wolfsbane.sql  0003_busy_thena.sql  0003_lively_sasquatch.sql  0003_superb_omega_red.sql  0004_elite_sebastian_shaw.sql  0004_luxuriant_whirlwind.sql  0005_acoustic_madame_hydra.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
apps/web/public/: manifest.json  sw.js  sw.js.map
apps/web/src/: middleware.ts
apps/web/src/actions/: admin.ts  categories.ts  checkout.ts  content.ts  entities.ts  god.ts  history.ts  home.ts  map.ts  marketplace.ts  payment.ts  scan.ts  search.ts  user.ts  vendor-actions.ts  vendor.ts
apps/web/src/app/: error.tsx  global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/db/: index.ts  (+4 more)
deploy_package/: debug.txt  debug_model.py  main.py  main.py.gup.bk  mainGpu.py  pm2rout.txt  requirements.txt  run.sh  train.py
services/: check_curropt.py  main.py  merge_data.py  predict.py  predictUltra.py  scrape.py  train.py  trainUltra.py  trainv2.py
services/api/app/: dependencies.py  main.py
(+97 files in other folders)
